2007-12-11  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>

	* gdk/directfb/gdkdrawable-directfb.c: Applied a patch by Claudio
	Ciccani	which fixes the mixing of gdk and cairo rendering.

2007-12-11  Mathias Hasselmann  <mathias@openismus.com>

	* gtk/gtkdnd.c, gtk/gtkwidget.c: Mention impact of GtkDestDefaults
	on "drag-motion" handlers. Clearify documentation for
	gtk_drag_dest_set.

2007-12-11 15:44:01  Tim Janik  <timj@imendio.com>

        * buildertest.c: made unnecessarily exported symbols static.
        switched g_return_if_fail() statements in tests to assertions.
        special cased currently failing Widget/accesibility test to
        run only for g_test_thorough(), so it doesn't break make check.
        some coding style fixes.

        * Makefile.am: added buildertest to TEST_PROGS.

2007-12-11  Stefan Kost  <ensonic@users.sf.net>

	* docs/tutorial/gtk-tut.sgml:
	  Use gtk_widget_get_parent_window() instead of widget->parent->window.

2007-12-10  Richard Hult  <richard@imendio.com>

	* gdk/quartz/Makefile.am:
	* gdk/quartz/gdkquartz.h:
	* gdk/quartz/gdkwindow-quartz.c: Install backend specific
	header (bug #405915). Also add a getter for the toplevel nswindow.

2007-12-10  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkdrawable-quartz.c:
	(gdk_quartz_drawable_get_context),
	(gdk_quartz_drawable_release_context):
	* gdk/quartz/gdkeventloop-quartz.c: (gdk_event_prepare),
	(gdk_event_check), (gdk_event_dispatch), (poll_func):
	* gdk/quartz/gdkwindow-quartz.h: Replace the autorelease pools
	used for each drawing context and in prepare, dispatch and poll
	with one that exists across each main loop iteration. Fixes leaks
	on leopard and protects against future leaks introduce when the
	underlying system changes again (bug #492977).

2007-12-10  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (move_resize_window_internal):
	Fix the check for no changes to position and size.

2007-12-10  Richard Hult  <richard@imendio.com>